@@ -6,5 +6,5 @@ use File::Hotfolder;
 # watch a given directory and print all new or modified files 
 File::Hotfolder->new( 
     watch => ($ARGV[0] // '.'),
-    print => FILE_FOUND,
+    print => FOUND_FILE,
 )->loop;
