@@ -2,6 +2,7 @@
 
 {{$NEXT}}
     - fixed filter option
+    - new option: catch
 
 0.02  2015-03-24 12:29:01 CET
     - improved documentation and examples
